News page footer jump fix.

--- a/css/base.css
+++ b/css/base.css
@@ -353,6 +353,9 @@ ul.gallery li ul.gallery-item-thumbs li a.active img {
 #feature-content ul.features-menu a.next:hover {
   background-position: -52px -40px;
 }
+#news #footer	{
+    margin-top: 100px;
+}
 #footer {
   clear: both;
   border-top: 1px solid #fff;
